kustomize-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: nginx-service
spec:
  selector:    
    component: nginx
  type: ClusterIP
  ports:  
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
