kustomize-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://nginx-auth.abrmanlabs.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://nginx-auth.abrmanlabs.com/oauth2/start?rd=$escaped_request_uri"
    kubernetes.io/ingress.class: nginx
  name: external-auth-oauth2
spec:
  rules:
  - host: nginx-auth.abrmanlabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: oauth2-proxy
spec:
  tls:
  - hosts:
    - nginx-auth.abrmanlabs.com
    secretName: nginx-auth-tls-staging
  rules:
  - host: nginx-auth.abrmanlabs.com
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
