kustomize-nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-sample-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
   # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
 # tls:
 # - hosts:
 #   - nginxsample.precasttoolkit.com
 #   secretName: nginx-sample-tls
  rules:
  - host: nginxpage.abrmanlabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
